@@ -148,11 +148,13 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
 
     private DetailsURL _detailsURL;
     protected AuditBehaviorType _auditBehaviorType = AuditBehaviorType.NONE;
+    protected AuditBehaviorType _xmlAuditBehaviorType = null;
     private FieldKey _auditRowPk;
 
     private final Map<String, CounterDefinition> _counterDefinitionMap = new CaseInsensitiveHashMap<>();    // Really only 1 for now, but could be more in future
 
     @NotNull
+    @Override
     public List<ColumnInfo> getPkColumns()
     {
         List<ColumnInfo> ret = new ArrayList<>();
@@ -253,16 +255,19 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return false;
     }
 
+    @Override
     public DbSchema getSchema()
     {
         return _schema;
     }
 
+    @Override
     public SqlDialect getSqlDialect()
     {
         return getSchema().getSqlDialect();
     }
 
+    @Override
     public List<String> getPkColumnNames()
     {
         List<String> ret = new ArrayList<>();
@@ -273,11 +278,13 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return Collections.unmodifiableList(ret);
     }
 
+    @Override
     public ColumnInfo getVersionColumn()
     {
         return null;
     }
 
+    @Override
     public String getVersionColumnName()
     {
         return null;
@@ -290,6 +297,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
     }
 
     @NotNull
+    @Override
     public SQLFragment getFromSQL(String alias)
     {
         if (null != getSelectName())
@@ -396,6 +404,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return ret;
     }
 
+    @Override
     public List<ColumnInfo> getUserEditableColumns()
     {
         List<ColumnInfo> ret = new ArrayList<>();
@@ -409,12 +418,14 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return Collections.unmodifiableList(ret);
     }
 
+    @Override
     public List<ColumnInfo> getColumns(String colNames)
     {
         String[] colNameArray = colNames.split(",");
         return getColumns(colNameArray);
     }
 
+    @Override
     public List<ColumnInfo> getColumns(String... colNameArray)
     {
         List<ColumnInfo> ret = new ArrayList<>(colNameArray.length);
@@ -492,6 +503,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return ret;
     }
 
+    @Override
     public ColumnInfo getColumn(@NotNull String name)
     {
         return getColumn(name, true);
@@ -561,9 +573,10 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
     }
 
     @NotNull
+    @Override
     public List<ColumnInfo> getColumns()
     {
-        return Collections.unmodifiableList(new ArrayList<>(_columnMap.values()));
+        return List.copyOf(_columnMap.values());
     }
 
     @NotNull
@@ -571,33 +584,37 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
     {
         checkLocked();
         return _columnMap.values().stream()
-                .map(c -> (BaseColumnInfo)c)
-                .peek(BaseColumnInfo::checkLocked)
-                .collect(Collectors.toList());
+            .map(c -> (BaseColumnInfo)c)
+            .peek(BaseColumnInfo::checkLocked)
+            .collect(Collectors.toList());
     }
 
-
+    @Override
     public Set<String> getColumnNameSet()
     {
         // Make the set case-insensitive
         return Collections.unmodifiableSet(new CaseInsensitiveTreeSet(_columnMap.keySet()));
     }
 
+    @Override
     public String getName()
     {
         return _name;
     }
 
+    @Override
     public String getTitle()
     {
         return _title == null ? _name : _title;
     }
 
+    @Override
     public String getTitleField()
     {
         return _title;
     }
 
+    @Override
     public String getDescription()
     {
         return _description;
@@ -684,6 +701,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         _methodMap.put(name, method);
     }
 
+    @Override
     public MethodInfo getMethod(String name)
     {
         if (_methodMap == null)
@@ -703,6 +721,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         _title = title;
     }
 
+    @Override
     public ActionURL getGridURL(Container container)
     {
         if (_gridURL == LINK_DISABLER)
@@ -716,6 +735,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return null;
     }
 
+    @Override
     public ActionURL getInsertURL(Container container)
     {
         if (_insertURL == LINK_DISABLER)
@@ -743,6 +763,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return null;
     }
 
+    @Override
     public ActionURL getDeleteURL(Container container)
     {
         if (_deleteURL == LINK_DISABLER)
@@ -756,6 +777,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return null;
     }
 
+    @Override
     public StringExpression getUpdateURL(@Nullable Set<FieldKey> columns, Container container)
     {
         if (_updateURL == LINK_DISABLER)
@@ -783,6 +805,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return null;
     }
 
+    @Override
     public StringExpression getDetailsURL(@Nullable Set<FieldKey> columns, Container container)
     {
         if (_detailsURL == AbstractTableInfo.LINK_DISABLER)
@@ -810,6 +833,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return null;
     }
 
+    @Override
     public boolean hasPermission(@NotNull UserPrincipal user, @NotNull Class<? extends Permission> perm)
     {
         SecurityLogger.log("AbstractTableInfo.hasPermission " + getName(), user, null, false);
@@ -857,6 +881,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         _updateURL = updateURL;
     }
 
+    @Override
     public ButtonBarConfig getButtonBarConfig()
     {
         return _buttonBarConfig;
@@ -868,6 +893,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         _buttonBarConfig = buttonBarConfig;
     }
 
+    @Override
     public AggregateRowConfig getAggregateRowConfig()
     {
         return _aggregateRowConfig;
@@ -879,6 +905,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         _aggregateRowConfig = config;
     }
 
+    @Override
     public void setDefaultVisibleColumns(@Nullable Iterable<FieldKey> list)
     {
         checkLocked();
@@ -886,6 +913,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
     }
 
     /** @return unmodifiable list of the columns that should be shown by default for this table */
+    @Override
     public List<FieldKey> getDefaultVisibleColumns()
     {
         if (_defaultVisibleColumns instanceof List)
@@ -1378,6 +1406,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
      * Returns true by default. Override if your derived class is not accessible through Query
      * @return Whether this table is public (i.e., accessible via Query)
      */
+    @Override
     public boolean isPublic()
     {
         //by default, all subclasses are public (i.e., accessible through Query)
@@ -1385,12 +1414,14 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return getPublicName() != null && getPublicSchemaName() != null;
     }
 
+    @Override
     public String getPublicName()
     {
         return getName();
     }
 
     /** @return a SchemaKey encoded name for this schema. */
+    @Override
     public String getPublicSchemaName()
     {
         // Prefer the UserSchema's name.  Assume the DbSchema name doesn't need encoding
@@ -1398,22 +1429,26 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return schema != null ? schema.getSchemaName() : getSchema().getName();
     }
 
+    @Override
     public boolean needsContainerClauseAdded()
     {
         return true;
     }
 
     @Nullable
+    @Override
     public ContainerFilter getContainerFilter()
     {
         return null;
     }
 
+    @Override
     public boolean isMetadataOverrideable()
     {
         return true;
     }
 
+    @Override
     public void overlayMetadata(String tableName, UserSchema schema, Collection<QueryException> errors)
     {
         checkLocked();
@@ -1424,6 +1459,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         }
     }
 
+    @Override
     public void overlayMetadata(Collection<TableType> metadata, UserSchema schema, Collection<QueryException> errors)
     {
         checkLocked();
@@ -1447,6 +1483,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return null;
     }
 
+    @Override
     public ColumnInfo getLookupColumn(ColumnInfo parent, String name)
     {
         ForeignKey fk = parent.getFk();
@@ -1455,18 +1492,21 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         return fk.createLookupColumn(parent, name);
     }
 
+    @Override
     public int getCacheSize()
     {
         return _cacheSize;
     }
 
     @Nullable
+    @Override
     public Domain getDomain()
     {
         return null;
     }
 
     @Nullable
+    @Override
     public DomainKind getDomainKind()
     {
         Domain domain = getDomain();
@@ -1476,6 +1516,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
     }
 
     @Nullable
+    @Override
     public QueryUpdateService getUpdateService()
     {
         // UNDONE: consider allowing all query tables to be updated via update service
@@ -1508,6 +1549,7 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
      * @return FieldKey of the Container column.
      */
     @Nullable
+    @Override
     public FieldKey getContainerFieldKey()
     {
         ColumnInfo col = getColumn("container");
@@ -1528,11 +1570,13 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
         _triggerFactories.put(factory.getClass(), factory);
     }
 
+    @Override
     public boolean hasTriggers(Container c)
     {
         return !getTriggers(c).isEmpty();
     }
 
+    @Override
     public boolean canStreamTriggers(Container c)
     {
         for (Trigger script : getTriggers(c))
@@ -1673,12 +1717,19 @@ abstract public class AbstractTableInfo implements TableInfo, AuditConfigurable,
     {
         checkLocked();
         _auditBehaviorType = type;
+        _xmlAuditBehaviorType = type;
     }
 
     @Override
     public AuditBehaviorType getAuditBehavior()
     {
         return _auditBehaviorType;
+    }
+
+    @Override
+    public AuditBehaviorType getXmlAuditBehaviorType()
+    {
+        return _xmlAuditBehaviorType;
     }
 
     @Override
